--- a/clans/teams/4kt-syndicate.html
+++ b/clans/teams/4kt-syndicate.html
@@ -254,7 +254,7 @@
 
             <div class="player-card">
                 <div class="role-badge">SUPPORT</div>
-                <div class="player-ign">LGN • LONA</div>
+                <div class="player-ign">4零 | LONA</div>
                 <div class="player-tag">"Utility King"</div>
                 <div class="player-info">
                     <div class="info-row"><span class="info-label">DEVICE</span> <span>iPad Pro</span></div>
@@ -276,7 +276,7 @@
 
              <div class="player-card">
                 <div class="role-badge" style="background:#555;">SUBSTITUTE</div>
-                <div class="player-ign">kzÑ</div>
+                <div class="player-ign">4零 | kzÑ</div>
                 <div class="player-tag">"Ready to Strike"</div>
                 <div class="player-info">
                     <div class="info-row"><span class="info-label">DEVICE</span> <span>Infinix</span></div>
