--- a/events.html
+++ b/events.html
@@ -167,8 +167,8 @@
     <div class="container">
         
         <header class="page-header">
-            <h1 class="page-title">OPS COMMAND</h1>
-            <div class="status-line"><span class="status-dot"></span> SYSTEM ONLINE // WAT TIMEZONE SYNCHRONIZED</div>
+            <h1 class="page-title">EVENTS</h1>
+            <div class="status-line"><span class="status-dot"></span> SYSTEM ONLINE </div>
         </header>
 
         <div class="carousel-wrapper">
@@ -204,10 +204,10 @@
             </div>
 
             <div class="slide">
-                <div class="featured-label" style="background:var(--purple); box-shadow:0 0 15px var(--purple)">MAJOR OP</div>
+                <div class="featured-label" style="background:var(--purple); box-shadow:0 0 15px var(--purple)">MAJOR EVENT</div>
                 <div class="match-title">ABC RANKINGS</div>
                 <p style="color:#ccc; font-size:1.1rem; letter-spacing:2px;">AFRICAN BATTLE ROYALE</p>
-                <p style="color:#666; margin-top:5px;">JAN 31 // PREPARE FOR DEPLOYMENT</p>
+                <p style="color:#666; margin-top:5px;">JAN 31 // PREPARE FOR REDEPLOYMENT</p>
 
                 <div class="timer-display" id="timer-abc">
                     <div class="t-box"><div class="t-val d">00</div><div class="t-label">DAYS</div></div>
@@ -216,7 +216,7 @@
                 </div>
 
                 <div style="margin-top:2rem; padding:1rem; color:#aaa;">
-                    Shadow Hunters Unit // Registration Locked // Awaiting Brackets
+                    Shadow Hunters Unit // Registration Locked //
                 </div>
             </div>
 
@@ -267,7 +267,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2026 BLOOD ESPORTS | 4KT SYNDICATE | EST. 2024</p>
+            <p>&copy; 2026 BLOOD ESPORTS | 4KT EVENT COMMAND | EST. 2024</p>
         </footer>
 
     </div>
