--- a/clans/teams/4kt-syndicate.html
+++ b/clans/teams/4kt-syndicate.html
@@ -263,44 +263,44 @@
             
             <div class="player-card card-igl">
                 <div class="player-icon"><i class="fas fa-crown"></i></div>
-                <div class="player-name">4零丨POT NODDLES</div>
-                <span class="discord-tag"><i class="fab fa-discord"></i> @LouLou</span>
-                <div class="player-role">IGL / CAPTAIN</div>
+                <div class="player-name">4零丨亗UTヤSÇREɅM</div>
+                <span class="discord-tag"><i class="fab fa-discord"></i> @screamz23</span>
+                <div class="player-role">ANCHOR</div>
             </div>
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
-                <div class="player-name">4零丨SIGMA GIRL</div>
-                <span class="discord-tag"><i class="fab fa-discord"></i> @its.maya7</span>
-                <div class="player-role">MAIN SLAYER</div>
+                <div class="player-name">4零丨POT NODDLES</div>
+                <span class="discord-tag"><i class="fab fa-discord"></i> @LouLou</span>
+                <div class="player-role">SLAYER</div>
             </div>
 
             <div class="player-card">
-                <div class="player-icon"><i class="fas fa-fire"></i></div>
-                <div class="player-name">4零丨HENNY</div>
-                <span class="discord-tag"><i class="fab fa-discord"></i> @hennyandice</span>
-                <div class="player-role">MAIN SLAYER</div>
+                <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
+                <div class="player-name">4零丨KZN</div>
+                <span class="discord-tag"><i class="fab fa-discord"></i> @crimsonvessel1_62045</span>
+                <div class="player-role">SLAYER</div>
             </div>
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-ghost"></i></div>
-                <div class="player-name">4零丨LGN • LONA</div>
-                <span class="discord-tag"><i class="fab fa-discord"></i> @lonacodm</span>
+                <div class="player-name">4零丨SIGMA GIRL</div>
+                <span class="discord-tag"><i class="fab fa-discord"></i> @its.maya7</span>
                 <div class="player-role">OBJECTIVE</div>
             </div>
 
             <div class="player-card">
-                <div class="player-icon"><i class="fas fa-bolt"></i></div>
-                <div class="player-name">4零丨KZN</div>
-                <span class="discord-tag"><i class="fab fa-discord"></i> @crimsonvessel1_62045</span>
-                <div class="player-role">SUPPORT</div>
+                <div class="player-icon"><i class="fas fa-ghost"></i></div>
+                <div class="player-name">4零丨HENNY</div>
+                <span class="discord-tag"><i class="fab fa-discord"></i> @hennyandice</span>
+                <div class="player-role">OBJECTIVE</div>
             </div>
 
             <div class="player-card">
-                <div class="player-icon"><i class="fas fa-shield-alt"></i></div>
+                <div class="player-icon"><i class="fas fa-ghost"></i></div>
                 <div class="player-name">4零丨CROFTYY</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> iamdawn01</span>
-                <div class="player-role">ANCHOR</div>
+                <div class="player-role">OBJECTIVE</div>
             </div>
         </div>
 
@@ -311,13 +311,13 @@
                 <div class="player-icon"><i class="fas fa-mask"></i></div>
                 <div class="player-name">4零丨¥乇・ĞĦØŠT</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> @night_revenants</span>
-                <div class="player-role">SUBSTITUTE</div>
+                <div class="player-role">OBJECTIVE</div>
             </div>
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-volume-up"></i></div>
-                <div class="player-name">4零丨亗UTヤSÇREɅM</div>
-                <span class="discord-tag"><i class="fab fa-discord"></i> @screamz23</span>
+                <div class="player-name">4零丨LGN • LONA</div>
+                <span class="discord-tag"><i class="fab fa-discord"></i> @lonacodm</span>
                 <div class="player-role">SUBSTITUTE</div>
             </div>
 
