--- a/clans/teams/4kt-syndicate.html
+++ b/clans/teams/4kt-syndicate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4KT Syndicate - MP Elite | Blood Esports</title>
+    <title>4KT Syndicate | Blood Esports</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -255,7 +255,7 @@
             <div class="player-icon"><i class="fas fa-user-tie"></i></div>
             <div class="player-name">KHALID</div>
             <span class="discord-tag"><i class="fab fa-discord"></i> @iseoluwa98amk</span>
-            <div class="player-role">CLAN MANAGER</div>
+            <div class="player-role">TEAM MANAGER</div>
         </div>
 
         <div class="section-header"><span>MAIN ROSTER</span></div>
@@ -263,14 +263,14 @@
             
             <div class="player-card card-igl">
                 <div class="player-icon"><i class="fas fa-crown"></i></div>
-                <div class="player-name">4零丨亗UTヤSÇREɅM</div>
+                <div class="player-name">4零丨SÇREɅM</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> @screamz23</span>
                 <div class="player-role">ANCHOR</div>
             </div>
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
-                <div class="player-name">4零丨POT NODDLES</div>
+                <div class="player-name">LOU LOU</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> @LouLou</span>
                 <div class="player-role">SLAYER</div>
             </div>
@@ -284,7 +284,7 @@
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-ghost"></i></div>
-                <div class="player-name">4零丨SIGMA GIRL</div>
+                <div class="player-name">SIGMA GIRL</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> @its.maya7</span>
                 <div class="player-role">OBJECTIVE</div>
             </div>
@@ -309,14 +309,14 @@
             
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-mask"></i></div>
-                <div class="player-name">4零丨¥乇・ĞĦØŠT</div>
+                <div class="player-name">4零丨ĞĦØŠT</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> @night_revenants</span>
                 <div class="player-role">OBJECTIVE</div>
             </div>
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-volume-up"></i></div>
-                <div class="player-name">4零丨LGN • LONA</div>
+                <div class="player-name">LONA</div>
                 <span class="discord-tag"><i class="fab fa-discord"></i> @lonacodm</span>
                 <div class="player-role">SUBSTITUTE</div>
             </div>
