--- a/clans/teams/4kt-storm-troopers.html
+++ b/clans/teams/4kt-storm-troopers.html
@@ -185,8 +185,8 @@
             
             <div class="player-card card-igl">
                 <div class="player-icon"><i class="fas fa-crown"></i></div>
-                <div class="player-name">KLEN 🇹🇷</div>
-                <div class="player-tag">4零丨KLEN</div>
+                <div class="player-name">vacant</div>
+                <div class="player-tag">vacant</div>
                 <div class="player-role">IGL / CAPTAIN</div>
             </div>
 
@@ -199,9 +199,9 @@
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
-                <div class="player-name">NUEL 🇳🇬</div>
-                <div class="player-tag">4零丨NUEL</div>
-                <div class="player-role">ELITE TROOPER</div>
+                <div class="player-name">vacant </div>
+                <div class="player-tag">vacant</div>
+                <div class="player-role">vacant</div>
             </div>
 
             <div class="player-card">
