--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </div>
             <div class="desktop-links">
                 <a href="about.html">ABOUT</a>
-                <a href="clans/4kt.html">4KT</a>
+                <a href="loadouts.html">LOADOUTS</a> <a href="clans/4kt.html">4KT</a>
                 <a href="clans/otf.html">OTF</a>
                 <a href="events.html">EVENTS</a>
             </div>
@@ -242,7 +242,7 @@
 
     <div class="mobile-dock">
         <a href="about.html" class="dock-item"><i class="fas fa-info-circle"></i>ABOUT</a>
-        <a href="clans/4kt.html" class="dock-item"><i class="fas fa-crown"></i>4KT</a>
+        <a href="loadouts.html" class="dock-item"><i class="fas fa-crosshairs"></i>LOADOUTS</a> <a href="clans/4kt.html" class="dock-item"><i class="fas fa-crown"></i>4KT</a>
         <a href="clans/otf.html" class="dock-item"><i class="fas fa-users"></i>OTF</a>
         <a href="events.html" class="dock-item"><i class="fas fa-calendar-alt"></i>EVENTS</a>
     </div>
