--- a/loadouts.html
+++ b/loadouts.html
@@ -151,10 +151,10 @@
         <div class="weapon-card">
             <div class="scan-line"></div>
             <div class="image-frame">
-                <img src="assets/images/Krm.png" class="weapon-img" alt="KRM Loadout">
+                <img src="assets/images/krm.png" class="weapon-img" alt="KRM Loadout">
             </div>
             <div class="intel-panel">
-                <h2 class="weapon-name">KRM-262 <span class="class-badge">SHOTGUN</span></h2>
+                <h2 class="weapon-name">KRM <span class="class-badge">SHOTGUN</span></h2>
                 <div class="stat-bars">
                     <div class="stat-row"><span class="stat-label">DMG</span><div class="bar-bg"><div class="bar-fill" style="width: 95%"></div></div></div>
                     <div class="stat-row"><span class="stat-label">MOBL</span><div class="bar-bg"><div class="bar-fill" style="width: 80%"></div></div></div>
@@ -210,7 +210,7 @@
                 <img src="assets/images/Archtoxin-117.png" class="weapon-img" alt="Archtoxin 117">
             </div>
             <div class="intel-panel">
-                <h2 class="weapon-name">AK117 (ARCH) <span class="class-badge">SLAYER</span></h2>
+                <h2 class="weapon-name">AK117 (ARCH) <span class="class-badge">AR</span></h2>
                 <div class="stat-bars">
                     <div class="stat-row"><span class="stat-label">AGGRO</span><div class="bar-bg"><div class="bar-fill" style="width: 95%"></div></div></div>
                     <div class="stat-row"><span class="stat-label">ADS</span><div class="bar-bg"><div class="bar-fill" style="width: 85%"></div></div></div>
