--- a/loadouts.html
+++ b/loadouts.html
@@ -151,10 +151,10 @@
         <div class="weapon-card">
             <div class="scan-line"></div>
             <div class="image-frame">
-                <img src="assets/images/krm.png" class="weapon-img" alt="KRM Loadout">
+                <img src="assets/images/IMG_0138.png" class="weapon-img" alt="KRM Loadout">
             </div>
             <div class="intel-panel">
-                <h2 class="weapon-name">KRM <span class="class-badge">SHOTGUN</span></h2>
+                <h2 class="weapon-name">KRM-262 <span class="class-badge">SHOTGUN</span></h2>
                 <div class="stat-bars">
                     <div class="stat-row"><span class="stat-label">DMG</span><div class="bar-bg"><div class="bar-fill" style="width: 95%"></div></div></div>
                     <div class="stat-row"><span class="stat-label">MOBL</span><div class="bar-bg"><div class="bar-fill" style="width: 80%"></div></div></div>
@@ -165,7 +165,7 @@
         <div class="weapon-card">
             <div class="scan-line"></div>
             <div class="image-frame">
-                <img src="assets/images/Grim-117.png" class="weapon-img" alt="AK117 Grim">
+                <img src="assets/images/IMG_0136.png" class="weapon-img" alt="AK117 Grim">
             </div>
             <div class="intel-panel">
                 <h2 class="weapon-name">AK117 (GRIM) <span class="class-badge">AR</span></h2>
@@ -179,7 +179,7 @@
         <div class="weapon-card">
             <div class="scan-line"></div>
             <div class="image-frame">
-                <img src="assets/images/stricker.png" class="weapon-img" alt="Striker">
+                <img src="assets/images/IMG_0135.png" class="weapon-img" alt="Striker">
             </div>
             <div class="intel-panel">
                 <h2 class="weapon-name">STRIKER <span class="class-badge">SPAM</span></h2>
@@ -193,7 +193,7 @@
         <div class="weapon-card">
             <div class="scan-line"></div>
             <div class="image-frame">
-                <img src="assets/images/em2.png" class="weapon-img" alt="EM2">
+                <img src="assets/images/IMG_0134.png" class="weapon-img" alt="EM2">
             </div>
             <div class="intel-panel">
                 <h2 class="weapon-name">EM2 <span class="class-badge">AR</span></h2>
@@ -207,10 +207,10 @@
         <div class="weapon-card">
             <div class="scan-line"></div>
             <div class="image-frame">
-                <img src="assets/images/Archtoxin-117.png" class="weapon-img" alt="Archtoxin 117">
+                <img src="assets/images/IMG_0133.png" class="weapon-img" alt="Archtoxin 117">
             </div>
             <div class="intel-panel">
-                <h2 class="weapon-name">AK117 (ARCH) <span class="class-badge">AR</span></h2>
+                <h2 class="weapon-name">AK117 (ARCH) <span class="class-badge">SLAYER</span></h2>
                 <div class="stat-bars">
                     <div class="stat-row"><span class="stat-label">AGGRO</span><div class="bar-bg"><div class="bar-fill" style="width: 95%"></div></div></div>
                     <div class="stat-row"><span class="stat-label">ADS</span><div class="bar-bg"><div class="bar-fill" style="width: 85%"></div></div></div>
@@ -221,7 +221,6 @@
     </div>
 
     <script>
-        // MATCHING PARTICLE ANIMATION FROM YOUR INDEX
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
         let particles = [];
