--- a/clans/teams/4kt-syndicate.html
+++ b/clans/teams/4kt-syndicate.html
@@ -255,7 +255,7 @@
             <div class="player-icon"><i class="fas fa-user-tie"></i></div>
             <div class="player-name">KHALID</div>
             <span class="discord-tag"><i class="fab fa-discord"></i> @iseoluwa98amk</span>
-            <div class="player-role">CLAN MANAGER</div>
+            <div class="player-role">TEAM MANAGER</div>
         </div>
 
         <div class="section-header"><span>MAIN ROSTER</span></div>
