--- a/clans/teams/4kt-storm-troopers.html
+++ b/clans/teams/4kt-storm-troopers.html
@@ -220,8 +220,8 @@
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-skull"></i></div>
-                <div class="player-name">MUNA 🇿🇦</div>
-                <div class="player-tag">4零丨MUNA</div>
+                <div class="player-name">vacant</div>
+                <div class="player-tag">vacant</div>
                 <div class="player-role">ELITE TROOPER</div>
             </div>
 
