--- a/clans/teams/4kt-storm-troopers.html
+++ b/clans/teams/4kt-storm-troopers.html
@@ -197,11 +197,12 @@
                 <div class="player-role">ELITE TROOPER</div>
             </div>
 
+
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-crosshairs"></i></div>
-                <div class="player-name">vacant </div>
-                <div class="player-tag">vacant</div>
-                <div class="player-role">vacant</div>
+                <div class="player-name">STXNNER 🇳🇬</div>
+                <div class="player-tag">4零丨STXNNER</div>
+                <div class="player-role">ELITE TROOPER</div>
             </div>
 
             <div class="player-card">
@@ -220,8 +221,8 @@
 
             <div class="player-card">
                 <div class="player-icon"><i class="fas fa-skull"></i></div>
-                <div class="player-name">vacant</div>
-                <div class="player-tag">vacant</div>
+                <div class="player-name">A CHILL GUY 🇳🇬</div>
+                <div class="player-tag">4零丨CHILLGUY</div>
                 <div class="player-role">ELITE TROOPER</div>
             </div>
 
