--- a/events.html
+++ b/events.html
@@ -191,10 +191,10 @@
             <div class="slide active">
                 <div class="featured-label">MP SCRIMS EVENT</div>
                 <div class="match-title">
-                    <span style="color:var(--purple)">4KT</span> <span class="match-vs">VS</span> <span>7SIN</span>
+                    <span style="color:var(--purple)">4KT</span> <span class="match-vs">VS</span> <span>CRYPT</span>
                 </div>
                 <p style="color:var(--gold); font-size:1.2rem; font-weight:bold; letter-spacing:4px;">IRON CLAW DUEL</p>
-                <p style="color:#888; margin-top:5px;">TODAY // 21:00 WAT</p>
+                <p style="color:#888; margin-top:5px;">CONCLUDED</p>
 
                 <div class="timer-display" id="timer-ironclaw">
                     <div class="t-box"><div class="t-val h">00</div><div class="t-label">HOURS</div></div>
@@ -205,15 +205,15 @@
                 <div class="intel-bar">
                     <div class="intel-segment">
                         <div class="intel-head">HARDPOINT</div>
-                        <div class="intel-data">COMBINE</div>
+                        <div class="intel-data">APOCALYPSE</div>
                     </div>
                     <div class="intel-segment">
                         <div class="intel-head">S&D</div>
-                        <div class="intel-data">FIRING RANGE</div>
+                        <div class="intel-data">EXPRESS</div>
                     </div>
                     <div class="intel-segment">
                         <div class="intel-head">CONTROL</div>
-                        <div class="intel-data">STANDOFF</div>
+                        <div class="intel-data">RAID</div>
                     </div>
                 </div>
             </div>
