--- a/events.html
+++ b/events.html
@@ -205,15 +205,15 @@
                 <div class="intel-bar">
                     <div class="intel-segment">
                         <div class="intel-head">HARDPOINT</div>
-                        <div class="intel-data">APOCALYPSE</div>
+                        <div class="intel-data">HACIENDA</div>
                     </div>
                     <div class="intel-segment">
                         <div class="intel-head">S&D</div>
-                        <div class="intel-data">EXPRESS</div>
+                        <div class="intel-data">TERMINAL</div>
                     </div>
                     <div class="intel-segment">
                         <div class="intel-head">CONTROL</div>
-                        <div class="intel-data">RAID</div>
+                        <div class="intel-data">CROSSFIRE</div>
                     </div>
                 </div>
             </div>
