--- a/clans/teams/kill_table.html
+++ b/clans/teams/kill_table.html
@@ -80,7 +80,7 @@
                 <tbody id="stats-body">
                     <tr>
                         <td class="rank-gold">1</td>
-                        <td>kzÑ</td>
+                        <td>4零 | kzÑ</td>
                         <td>157</td>
                         <td>41</td>
                         <td>1.33</td>
@@ -122,14 +122,14 @@
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>Ax | 4KT</td>
+                        <td>Ax | 4零</td>
                         <td>22</td>
                         <td>23</td>
                         <td>0.48</td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>LGN • LONA</td>
+                        <td>4零 | LONA</td>
                         <td>11</td>
                         <td>0</td>
                         <td>0.50</td>
