--- a/clans/teams/results.html
+++ b/clans/teams/results.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="stats-row">
                     <div class="stat-pill">OPPONENT: <span class="stat-val">7sins Esports</span></div>
-                    <div class="stat-pill">RESULT: <span class="stat-val" style="color:var(--gold)">Win</span></div>
+                    <div class="stat-pill">STATUS: <span class="stat-val" style="color:var(--gold)">Win</span></div>
                 </div>
             </div>
             <div class="score-box">
@@ -149,8 +149,8 @@
                     4KT <span class="vs-tag">VS</span> INA
                 </div>
                 <div class="stats-row">
-                    <div class="stat-pill">MODE: <span class="stat-val">Standard</span></div>
-                    <div class="stat-pill">K/D: <span class="stat-val" style="color:var(--gold)">101</span></div>
+                    <div class="stat-pill">OPPONENT: <span class="stat-val">INA</span></div>
+                    <div class="stat-pill">STATUS: <span class="stat-val" style="color:var(--gold)">Win</span></div>
                 </div>
             </div>
             <div class="score-box">
@@ -171,8 +171,8 @@
                     4KT <span class="vs-tag">VS</span> 7SINS
                 </div>
                 <div class="stats-row">
-                    <div class="stat-pill">MODE: <span class="stat-val">Competitive</span></div>
-                    <div class="stat-pill">RECAP: <span class="stat-val">Hard Fought</span></div>
+                    <div class="stat-pill">OPPONENT: <span class="stat-val">7sins Esports</span></div>
+                    <div class="stat-pill">STATUS: <span class="stat-val">Hard Fought</span></div>
                 </div>
             </div>
             <div class="score-box">
@@ -215,8 +215,8 @@
                     4KT <span class="vs-tag">VS</span> MARAB
                 </div>
                 <div class="stats-row">
-                    <div class="stat-pill">MODE: <span class="stat-val">Scrims</span></div>
-                    <div class="stat-pill">DOMINANCE: <span class="stat-val" style="color:var(--gold)">Clean Sweep</span></div>
+                    <div class="stat-pill">OPPONENT: <span class="stat-val">Marab</span></div>
+                    <div class="stat-pill">STATUS: <span class="stat-val" style="color:var(--gold)">Clean Sweep</span></div>
                 </div>
             </div>
             <div class="score-box">
