--- a/index.html
+++ b/index.html
@@ -249,8 +249,10 @@
     <nav class="luxury-nav">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="logo.png" alt="Logo" class="nav-logo-small">
-                <div class="nav-title"><span style="color:var(--gold)">BLOOD</span> <span style="color:var(--red)">ESPORTS</span></div>
+                <a href="index.html" style="text-decoration: none; display: flex; align-items: center; gap: 12px; color: inherit;">
+                    <img src="logo.png" alt="Logo" class="nav-logo-small">
+                    <div class="nav-title"><span style="color:var(--gold)">BLOOD</span> <span style="color:var(--red)">ESPORTS</span></div>
+                </a>
             </div>
             <div class="desktop-links">
                 <a href="about.html">ABOUT</a>
