--- a/clans/teams/kill_table.html
+++ b/clans/teams/kill_table.html
@@ -101,23 +101,23 @@
                     <tr>
                         <td class="rank-gold">1</td>
                         <td><span class="animated-name">4零 | kzÑ</span></td>
-                        <td>249</td>
-                        <td>59</td>
-                        <td>1.45</td>
+                        <td>343</td>
+                        <td>83</td>
+                        <td class="kd-high">1.52</td>
                     </tr>
                     <tr>
                         <td>2</td>
+                        <td><span class="animated-name">4零 | LouLou</span></td>
+                        <td>248</td>
+                        <td>66</td>
+                        <td>1.28</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
                         <td><span class="animated-name">4零 | Sumayyah</span></td>
                         <td>189</td>
                         <td>58</td>
                         <td>0.92</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td><span class="animated-name">4零 | LouLou</span></td>
-                        <td>159</td>
-                        <td>50</td>
-                        <td>1.20</td>
                     </tr>
                     <tr>
                         <td>4</td>
@@ -136,16 +136,16 @@
                     <tr>
                         <td>6</td>
                         <td><span class="animated-name">4零 | Ax4KT</span></td>
-                        <td>65</td>
-                        <td>40</td>
-                        <td>0.64</td>
+                        <td>97</td>
+                        <td>59</td>
+                        <td>0.65</td>
                     </tr>
                     <tr>
                         <td>7</td>
                         <td><span class="animated-name">4零 | Henny</span></td>
-                        <td>52</td>
-                        <td>30</td>
-                        <td>0.43</td>
+                        <td>88</td>
+                        <td>46</td>
+                        <td>0.45</td>
                     </tr>
                     <tr>
                         <td>8</td>
@@ -160,6 +160,35 @@
 
         <h1><i class="fas fa-history"></i> RECENT BATTLES</h1>
         <div class="log-container">
+            <div class="log-entry" style="border-left: 5px solid var(--loss);">
+                <div class="map-info">
+                    <span class="map-name">CROSSFIRE</span>
+                    <span class="mode-name">Control</span>
+                </div>
+                <div class="score-section">
+                    <div class="score-line defeat-text">0 : 3</div>
+                </div>
+            </div>
+
+            <div class="log-entry" style="border-left: 5px solid var(--loss);">
+                <div class="map-info">
+                    <span class="map-name">TAKEOFF</span>
+                    <span class="mode-name">Hardpoint</span>
+                </div>
+                <div class="score-section">
+                    <div class="score-line defeat-text">248 : 250</div>
+                </div>
+            </div>
+
+            <div class="log-entry" style="border-left: 5px solid var(--win);">
+                <div class="map-info">
+                    <span class="map-name">SLUMS</span>
+                    <span class="mode-name">Search & Destroy</span>
+                </div>
+                <div class="score-section">
+                    <div class="score-line victory-text">7 : 3</div>
+                </div>
+            </div>
             <div class="log-entry" style="border-left: 5px solid var(--loss);">
                 <div class="map-info">
                     <span class="map-name">SUMMIT</span>
@@ -187,26 +216,6 @@
                 </div>
                 <div class="score-section">
                     <div class="score-line victory-text">3 : 1</div>
-                </div>
-            </div>
-
-            <div class="log-entry" style="border-left: 5px solid var(--win);">
-                <div class="map-info">
-                    <span class="map-name">HACIENDA</span>
-                    <span class="mode-name">Hardpoint</span>
-                </div>
-                <div class="score-section">
-                    <div class="score-line victory-text">250 : 14</div>
-                </div>
-            </div>
-
-            <div class="log-entry" style="border-left: 5px solid var(--win);">
-                <div class="map-info">
-                    <span class="map-name">TERMINAL</span>
-                    <span class="mode-name">Search & Destroy</span>
-                </div>
-                <div class="score-section">
-                    <div class="score-line victory-text">7 : 1</div>
                 </div>
             </div>
         </div>
