--- a/clans/teams/results.html
+++ b/clans/teams/results.html
@@ -115,6 +115,28 @@
         <h1>BATTLE RECORD</h1>
         <div class="subtitle">OFFICIAL MATCH RESULTS</div>
 
+        <div class="match-card loss">
+            <div class="date-box">
+                <span class="day">27</span>
+                <span class="month">JAN</span>
+                <span class="year">2026</span>
+            </div>
+            <div class="info-box">
+                <div class="event-name">SCRIM SERIES</div>
+                <div class="versus">
+                    4KT <span class="vs-tag">VS</span> TEF
+                </div>
+                <div class="stats-row">
+                    <div class="stat-pill">OPPONENT: <span class="stat-val">TEF RESURGENCE</span></div>
+                    <div class="stat-pill">STATUS: <span class="stat-val">Close Match</span></div>
+                </div>
+            </div>
+            <div class="score-box">
+                <div class="score-val">1 - 2</div>
+                <div class="result-label">DEFEAT</div>
+            </div>
+        </div>
+
         <div class="match-card">
             <div class="date-box">
                 <span class="day">26</span>
@@ -221,28 +243,6 @@
             </div>
             <div class="score-box">
                 <div class="score-val">3 - 0</div>
-                <div class="result-label">VICTORY</div>
-            </div>
-        </div>
-
-        <div class="match-card">
-            <div class="date-box">
-                <span class="day">08</span>
-                <span class="month">JAN</span>
-                <span class="year">2026</span>
-            </div>
-            <div class="info-box">
-                <div class="event-name">IRON CLAW SCRIMS</div>
-                <div class="versus">
-                    7SINS <span class="vs-tag">VS</span> 4KT
-                </div>
-                <div class="stats-row">
-                    <div class="stat-pill">OPPONENT: <span class="stat-val">7sins Esports</span></div>
-                    <div class="stat-pill">STATUS: <span class="stat-val" style="color:var(--gold)">Win</span></div>
-                </div>
-            </div>
-            <div class="score-box">
-                <div class="score-val">1 - 2</div>
                 <div class="result-label">VICTORY</div>
             </div>
         </div>
